<resources>
    <string name="app_name">가봤을지도?</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="setting_button_init">DB 초기화</string>
    <string name="setting_button_rescan">사진 재탐색</string>
    <string name="setting_alert_title_db_init">DB 초기화</string>
    <string name="setting_alert_message_db_init">DB를 초기화합니다. 앱이 다시 시작됩니다.</string>
    <string name="setting_alert_title_rescan">사진 재탐색</string>
    <string name="setting_alert_message_rescan">사진 재탐색합니다. 앱이 다시 시작됩니다.</string>

    <string name="record_detail_title_save">확인</string>
    <string name="record_detail_message_save">작성 내용을 저장할까요?</string>
    <string name="record_detail_no_comment">어떤 장소였나요?</string>
    <string name="record_detail_no_address">경기도 안양시 만안구 석수2동</string>
    <string name="record_detail_no_datetime">2021-09-27 20:22:17.007</string>

    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="rank">순위</string>
    <string name="address">주소</string>
    <string name="count">사진 수</string>

    <string name="ranking_title">많이 방문한 장소</string>

    <string name="setting_title">설정</string>
    <string name="edit">수정</string>
    <string name="save">저장</string>
    <string name="credit">가봤을지도?\n\'21-2학기 모바일 앱 개발\n 중앙대학교 융합공학부 디지털이미징전공\n 20172979 이효중</string>
    <string name="no_location_info">어떤 장소 인가요?</string>
    <string name="no_datetime_info">시간/날짜 정보가 없습니다.</string>
    <string name="no_address">위치정보가 없습니다.</string>
    <string name="no_comment">\'수정\'을 터치하여 입력해보세요.</string>
    <string name="no_rating">0.0f</string>
    <string name="no_datetime">날짜/시간 정보가 없습니다.</string>
    <string name="backkeypressed">뒤로가기를 한번 더 누르면 종료됩니다.</string>
    <string name="saved">저장했습니다.</string>
    <string name="alert_scan_pictures">사진을 스캔 중입니다. 잠시만 기다려 주세요.</string>
    <string name="text_failed_to_grant_permissions">앱을 실행하려면 권한이 필요합니다.</string>
</resources>