<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RankingActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/ranking_column_rank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rank"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@id/ranking_content_rank"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ranking_column_count"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ranking_column_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/count"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@id/ranking_content_rank"
                app:layout_constraintLeft_toRightOf="@id/ranking_content_rank"
                app:layout_constraintRight_toLeftOf="@id/ranking_column_city"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ranking_column_city"
                android:text="@string/address"
                android:layout_width="0dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="4"
                app:layout_constraintBottom_toTopOf="@id/ranking_content_city"
                app:layout_constraintLeft_toRightOf="@+id/ranking_column_count"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ranking_content_rank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toBottomOf="@id/ranking_column_rank"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ranking_content_count"/>

            <TextView
                android:id="@+id/ranking_content_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toBottomOf="@id/ranking_column_count"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/ranking_content_rank"
                app:layout_constraintRight_toLeftOf="@id/ranking_content_city"/>

            <TextView
                android:id="@+id/ranking_content_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintHorizontal_weight="4"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@id/ranking_column_city"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/ranking_content_count"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>